--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,17 @@ mat-drawer-container{
     min-height: 100vh;
 }
 mat-drawer{
-    width: 300px;
+    width: 255px;
+}
+.nav-link--item{
+    display: flex;
+    align-items: center;
+    padding: 16px 24px;
+    color: var(--app-dark-text-color);
+}
+.nav-link--item:hover{
+    background: #eee;
+}
+.nav-link--item mat-icon{
+    margin-right: 16px;
 }
