spliting the app into modules

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,9 +21,7 @@
         </div>
         <div class="card-body">
           <div class="chart-wrapper">
-            <div>
-              <canvas #salesChartCanvas></canvas>
-            </div>
+            <sales-chart></sales-chart>
           </div>
         </div>
       </div>
